<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_dark" >
    
     
   <ImageView 
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="90dip"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/zipcode_banner"
            android:src="@drawable/zipcodebanner">
            </ImageView>
         
   <Button 
	 	    android:id="@+id/getHistory"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:text="@string/search_all_regions"/>
   
   
   
		<Button 
	 	    android:id="@+id/popularZipcodes"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:text="@string/popular_zipcodes"
	 	   />
		
		
		<Spinner 
	 	    android:id="@+id/favList"
	 	   	android:layout_width="match_parent"
	 	    android:layout_height="wrap_content"
	 	    android:paddingBottom="10dp"
	 	    android:paddingTop="10dp"
	 	    android:prompt="@string/enter_zipcode_here"
	 	    android:visibility="invisible"
	 	    style="@style/spinnerStyle" />
		
		
		

		<ListView 
		    android:id="@+id/list"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:divider="#ffffffff"
		    android:drawSelectorOnTop="false">
		    
		</ListView>
		
</LinearLayout>
